fix jumbotron centering on mobile

--- a/frontend/src/scss/jumbotron.scss
+++ b/frontend/src/scss/jumbotron.scss
@@ -137,6 +137,8 @@ $grid-gap: 20px;
 	.isitweeka {
 		flex: 1;
 		padding: 0;
+		height: 100%;
+		min-height: 100%;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -405,6 +407,7 @@ $grid-gap: 20px;
 	.isitweeka-jumbotron {
 		/*padding-top: 80px;*/
 		box-sizing: border-box;
+		min-height: 100vh;
 	}
 }
 
